added all the works

--- a/cards.html
+++ b/cards.html
@@ -26,8 +26,8 @@
             <div class="card-content">
                 <div class="card-image-caption">
                     <img class="card-image" src="CardAssets/maria_martinez.png" />
-                    <p>Maria Martinez. <em>Image sequence of Maria's process.</em> Photography. 1930s.
-                        Mexican.</p>
+                    <p>Maria Martinez. <em>Image sequence of Maria's process.</em> Mexican. 1930s.
+                        Photography.</p>
                 </div>
                 <div class="card-separator"></div>
                 <div class="card-info">
@@ -59,8 +59,8 @@
             <div class="card-content">
                 <div class="card-image-caption">
                     <img class="card-image" src="CardAssets/peeters_still.png" />
-                    <p>Clara Peeters. <em>Still Life with Cheese, Almonds, and Pretzels.</em> Oil on canvas. 1615.
-                        Flemish.</p>
+                    <p>Clara Peeters. <em>Still Life with Cheese, Almonds, and Pretzels.</em> Flemish. 1615.
+                        Oil on canvas.</p>
                 </div>
                 <div class="card-separator"></div>
                 <div class="card-info">
@@ -106,8 +106,8 @@
             <div class="card-content">
                 <div class="card-image-caption">
                     <img class="card-image" src="CardAssets/chocolatero.png" />
-                    <p>Unknown. <em>Chocolate Jar (Chocolatero).</em>Tin-glazed earthenware, iron. ca 1700. Mexican
-                        Puebla.</p>
+                    <p>Unknown. <em>Chocolate Jar (Chocolatero).</em> Mexican
+                        Puebla. ca 1700. Tin-glazed earthenware, iron.</p>
                 </div>
                 <div class="card-separator"></div>
                 <div class="card-info">
@@ -246,6 +246,197 @@
             </div>
         </div>
 
+        <h2>Significant Works</h2>
+
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/works/peaches_glass_jug.png" />
+                    </div>
+                    <p>Unknown. <em>Peaches and a Glass Jug</em>. Roman, Herculaeneum. ca 50BC.</p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/chocolatero.png" />
+                    </div>
+                    <p>Unknown. <em>Chocolate Jar (Chocolatero).</em> Mexican
+                        Puebla. ca 1700. Tin-glazed earthenware, iron.</p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/works/maya.webp" />
+                    </div>
+                    <p><em>Bowl with Anthropomorphic Cacao Trees</em>. Maya. Early Classic Period (400-500 CE).
+                        Carbonate Stone.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/works/wedging_clay.jpg" />
+                    </div>
+                    <p><em>Wedging clay, Shaping on the Potter's Wheel, Molding and Refining</em>. Guangzhou, China,
+                        1825. Gouache on paper.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/works/turban.webp" />
+                    </div>
+                    <p><em>Tie-Dyed Lahiry-a turban cloth</em>T Tie-dyed cotton. India (Rajasthan) 1840s-1870s.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/peeters_still.png" />
+                    </div>
+                    <p>Clara Peeters. <em>Still Life with Cheese, Almonds, and Pretzels.</em> Flemish. 1615.
+                        Oil on canvas.</p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/works/cotan_still.png" />
+                    </div>
+                    <p>Juan Sánchez Cotán. <em>Still Life with Fruit and Vegetables</em>. 1602. Hernani Collection,
+                        Madrid.</p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/works/steen_still.jpg" />
+                    </div>
+                    <p>Jan Steen. <em>The Fat and Lean Kitchen</em>. Between 1650 and 1655. Oil on panel.</p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/works/last_supper.jpg" />
+                    </div>
+                    <p>Leonardo da Vinci. <em>Last Supper</em>. 1490s. Santa Maria della Grazie in Milan.</p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/works/martinez_jar.jpg" />
+                    </div>
+                    <p>Maria Martinez and Julian Martinez. <em>Jar</em>. ca. 1939; Blackware.</p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/works/sugar_sculpture.png" />
+                    </div>
+                    <p>After Giovanni Battista Zaccarini (sugar sculptor), Trionfi (sugar sculptures), etching, from
+                        Disegni del convito (1693).
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/works/sugar_plantation.png" />
+                    </div>
+                    <p>William Clark. <em>Ten View in the Island of Antigua</em>. 1823.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/works/porcelain.png" />
+                    </div>
+                    <p><em>Hot water plate</em>. Jingdezhen, China. 1830-70. Molded porcelain with underglaze cobalt
+                        blue painted
+                        decoration.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/works/wabi_tea.png" />
+                    </div>
+                    <p><em>Black Seto Teabowl, known as "Iron Mallet"</em>. Momoyama Period. Late 16th century. Japan.
+                        Glazed stoneware.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/works/coffeehouse.png" />
+                    </div>
+                    <p>Ottoman painting showing the interior of a coffeehouse. 1610.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/works/van_gogh.jpg" />
+                    </div>
+                    <p>Vincent Van Gogh, <em>Interior of a Restaurant</em>. 1887, Paris.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <div class="work-border">
+                        <img class="card-image" src="CardAssets/works/lobster.jpg" />
+                    </div>
+                    <p>Caillebotte. <em>Langouste a la Parisien</em>. 1881. Paris. Oil on Canvas.
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer>
