--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
 <body>
   <div id="nav-bar-wrapper">
     <div id="nav-bar">
-      <div id="about-anchor" class="nav-element">About</div>
-      <div id="project-anchor" class="nav-element">Projects</div>
-      <div id="img-in-nav-holder">
+      <a id="about-anchor" class="nav-element selected-nav" href="index.html">About</a>
+      <a id="project-anchor" class="nav-element" href="projects.html">Projects</a>
+      <div id="nav-title">
         <hr class="nav-line" />
         <p>TG</p>
         <hr class="nav-line" />
       </div>
-      <div id="experience-anchor" class="nav-element">Experience</div>
-      <div id="gallery-anchor" class="nav-element">Gallery</div>
+      <a id="experience-anchor" class="nav-element" href="experience.html">Experience</a>
+      <a id="gallery-anchor" class="nav-element" href="gallery.html">Gallery</a>
     </div>
   </div>
   <div id="fake-nav"></div>
   <div id="banner">
     <p id="painting-caption"><em>At the Races</em>, Edouard Manet c. 1875</p>
   </div> 
-  <div id="home-body">
+  <div id="page-body">
     <div id="page-content">
       <h2 id="page-title">Tyler Gurth</h2>
       <div class="page-text">
@@ -64,6 +64,8 @@
           <button class="page-button" onclick="window.open('https://github.com/tgurth')">GITHUB</button>
           <button class="page-button"
             onclick="window.open('https://www.instagram.com/tylergurth/')">INSTAGRAM</button>
+            <button class="page-button"
+            onclick="window.open('photography.html')">PHOTOGRAPHY</button>
         </div>
       </div>
     </div>
@@ -381,11 +383,9 @@
       href="photography.html">Photography
       Website</a></p> -->
 
-
-
   <footer>
-    <p>© 2023 Tyler Gurth. All rights reserved.
-      Javascript, HTML, and a dash of CSS.
+    <p>© 2024 Tyler Gurth. All rights reserved.
+      JS, HTML, and a dash of CSS.
     </p>
   </footer>
   </div>
