finished projects page

--- a/projects.html
+++ b/projects.html
@@ -65,151 +65,238 @@
                 <h2 id="page-title">Projects</h2>
                 <div class="page-text">
                     <blockquote>
-                        Below are some of the paid/unpaid projects I've done over the past few years! This is just a snapshot of the work I've done - feel free to reach out for more info!
+                        Below are some of the paid/unpaid projects I've done
+                        over the past few years! This is just a snapshot of the
+                        work I've done - feel free to reach out for more info!
                     </blockquote>
                 </div>
                 <div class="page-box">
                     <div class="project-info">
-                        <h2 class="project-title">The Virtual Rosetta (Research)</h2>
-                        <hr class="project-hr">
-                        </hr>
+                        <h2 class="project-title">
+                            The Virtual Rosetta (Research)
+                        </h2>
+                        <hr class="project-hr" />
                         <p>
-                          The Virtual Rosetta was a project I worked on in the summer of 2022. It involved using scientific
-                          Python libraries to create visualization methods of a corpus of 4000
-                          woodblock prints from Vietnam. Read more about it here: <a
-                            href="https://drive.google.com/file/d/1LMgf56KCXGp90ApKy1m1LnQyOwqtleDC/view?usp=sharing">Research
-                            Poster</a>
+                            The Virtual Rosetta was a project I worked on in the
+                            summer of 2022. It involved using scientific Python
+                            libraries to create visualization methods of a
+                            corpus of 4000 woodblock prints from Vietnam. Read
+                            more about it here:
+                            <a
+                                href="https://drive.google.com/file/d/1LMgf56KCXGp90ApKy1m1LnQyOwqtleDC/view?usp=sharing"
+                                >Research Poster</a
+                            >
                         </p>
                         <h3>Technical Details</h3>
                         <ul>
-                          <li>Generated serialized matrices, minimum spanning trees, and force directed graphs using Python science
-                            libraries like SciPy,
-                            Sci-Kit Learn, and Pandas.</li>
-                          <li>Researched effective methods for dimensional reduction data visualization such as T-SNE.</li>
-                          <li>Programmed Python web scraping scripts with BeautifulSoup to convert the HTML corpus of data into PNG
-                            types and compile datasets.</li>
-                          <li>Visualized complex data in actionable graphs using PyPlot, revealing qualitative trends.</li>
+                            <li>
+                                Generated serialized matrices, minimum spanning
+                                trees, and force directed graphs using Python
+                                science libraries like
+                                <span class="code">SciPy</span>,
+                                <span class="code">Sci-Kit Learn</span>, and
+                                <span class="code">Pandas</span>.
+                            </li>
+                            <li>
+                                Researched effective methods for dimensional
+                                reduction data visualization such as
+                                <span class="code">T-SNE</span>.
+                            </li>
+                            <li>
+                                Programmed Python web scraping scripts with
+                                <span class="code">BeautifulSoup</span> to
+                                convert the HTML corpus of data into PNG types
+                                and compile datasets.
+                            </li>
+                            <li>
+                                Visualized complex data in actionable graphs
+                                using <span class="code">PyPlot</span>,
+                                revealing qualitative trends.
+                            </li>
                         </ul>
                         <div class="skills">
-                          <div class="tech-skill" style="background-color: rgba(46, 255, 46, 0.351);">Python</div>
-                          <div class="tech-skill" style="background-color: rgba(255, 245, 129, 0.351);">HTML</div>
-                          <div class="tech-skill" style="background-color: rgba(255, 215, 129, 0.351);">Excel</div>
+                            <div
+                                class="tech-skill"
+                                style="
+                                    box-shadow: 5px 5px 0px
+                                        rgba(39, 139, 39, 0.351);
+                                "
+                            >
+                                Python
+                            </div>
+                            <div
+                                class="tech-skill"
+                                style="
+                                    box-shadow: 5px 5px 0px
+                                        rgba(194, 255, 129, 0.351);
+                                "
+                            >
+                                HTML
+                            </div>
+                            <div
+                                class="tech-skill"
+                                style="
+                                    box-shadow: 5px 5px 0px
+                                        rgba(67, 127, 76, 0.351);
+                                "
+                            >
+                                Excel
+                            </div>
                         </div>
-                      </div>
-
+                    </div>
                 </div>
                 <div class="page-box">
+                    <div class="project-info">
+                        <h2 class="project-title">Escape Room Web Panel</h2>
 
+                        <hr class="project-hr" />
+                        <p>
+                            The Escape Garden State Web Panel was a project I
+                            made for my previous employer, an escape room
+                            company in New Jersey. The site replaced an old,
+                            out-dated subscription site with a customized web
+                            app that fit the needs of the company.
+                        </p>
+                        <h3>Technical Details</h3>
+                        <ul>
+                            <li>
+                                Utilized
+                                <span class="code">Google Firebase</span> as
+                                storage, authentication, and database for the
+                                project.
+                            </li>
+                            <li>
+                                Programmed custom tools for the app, including
+                                scripting time functions and game features with
+                                Javascript.
+                            </li>
+                            <li>
+                                Developed utils for statistic tracking, to be
+                                used for further adveritsiing and data analysis.
+                            </li>
+                            <li>
+                                Designed, and created with original CSS, a GUI
+                                for employees to run the escape rooms.
+                            </li>
+                        </ul>
+                        <div class="skills">
+                            <div
+                                class="tech-skill"
+                                style="
+                                    box-shadow: 5px 5px 0px
+                                        rgba(116, 156, 74, 0.351);
+                                "
+                            >
+                                Javascript
+                            </div>
+                            <div
+                                class="tech-skill"
+                                style="
+                                    box-shadow: 5px 5px 0px
+                                        rgba(194, 255, 129, 0.351);
+                                "
+                            >
+                                HTML
+                            </div>
+                            <div
+                                class="tech-skill"
+                                style="
+                                    box-shadow: 5px 5px 0px
+                                        rgba(18, 199, 24, 0.351);
+                                "
+                            >
+                                CSS
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="page-box">
-
+                    <div class="project-info">
+                        <h2 class="project-title">Scrappy</h2>
+                        <hr class="project-hr" />
+                        <p>
+                            Scrappy is a React social media web app I made with
+                            a team in my software engineering class at Brown. It
+                            combines the best aspects of photo sharing apps with
+                            social media, forming a sentimental and reflective
+                            view into a user's life.
+                        </p>
+                        <h3>Technical Details</h3>
+                        <ul>
+                            <li>
+                                Used <span class="code">React</span> TypeScript
+                                Framework to build out the components of the
+                                site, coupled with
+                                <span class="code">React Router</span> to create
+                                a navigable state system.
+                            </li>
+                            <li>
+                                Connected with Google Authentication API to
+                                compose a login service and security.
+                            </li>
+                            <li>
+                                Developed a
+                                <span class="code">MongoDB</span> Java database,
+                                and uploaded photos to
+                                <span class="code">AWS</span> as storage.
+                            </li>
+                            <li>
+                                Personally programmed an NLP sorting algorithm
+                                using English feature vectors to sort posts
+                                based on Hashtags.
+                            </li>
+                        </ul>
+                        <div class="skills">
+                            <div
+                                class="tech-skill"
+                                style="
+                                    box-shadow: 5px 5px 0px
+                                        rgba(116, 156, 74, 0.351);
+                                "
+                            >
+                                Javascript
+                            </div>
+                            <div
+                                class="tech-skill"
+                                style="
+                                    box-shadow: 5px 5px 0px
+                                        rgba(87, 117, 55, 0.351);
+                                "
+                            >
+                                Typescript
+                            </div>
+                            <div
+                                class="tech-skill"
+                                style="
+                                    box-shadow: 5px 5px 0px
+                                        rgba(194, 255, 129, 0.351);
+                                "
+                            >
+                                HTML
+                            </div>
+                            <div
+                                class="tech-skill"
+                                style="
+                                    box-shadow: 5px 5px 0px
+                                        rgba(18, 199, 24, 0.351);
+                                "
+                            >
+                                CSS
+                            </div>
+                            <div
+                                class="tech-skill"
+                                style="
+                                    box-shadow: 5px 5px 0px
+                                        rgba(0, 171, 26, 0.351);
+                                "
+                            >
+                                Java
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-  <div class="page-section">
-    <div id="project-section">
-      <h2 class="section-title">Projects</h2>
-      <div class="project-box">
-        <div class="project-info">
-          <h2 class="project-title">The Virtual Rosetta (Research)</h2>
-          <hr class="project-hr">
-          </hr>
-          <p>
-            The Virtual Rosetta was a project I worked on in the summer of 2022. It involved using scientific
-            Python libraries to create visualization methods of a corpus of 4000
-            woodblock prints from Vietnam. Read more about it here: <a
-              href="https://drive.google.com/file/d/1LMgf56KCXGp90ApKy1m1LnQyOwqtleDC/view?usp=sharing">Research
-              Poster</a>
-          </p>
-          <h3>Technical Details</h3>
-          <ul>
-            <li>Generated serialized matrices, minimum spanning trees, and force directed graphs using Python science
-              libraries like SciPy,
-              Sci-Kit Learn, and Pandas.</li>
-            <li>Researched effective methods for dimensional reduction data visualization such as T-SNE.</li>
-            <li>Programmed Python web scraping scripts with BeautifulSoup to convert the HTML corpus of data into PNG
-              types and compile datasets.</li>
-            <li>Visualized complex data in actionable graphs using PyPlot, revealing qualitative trends.</li>
-          </ul>
-          <div class="skills">
-            <div class="tech-skill" style="background-color: rgba(46, 255, 46, 0.351);">Python</div>
-            <div class="tech-skill" style="background-color: rgba(255, 245, 129, 0.351);">HTML</div>
-            <div class="tech-skill" style="background-color: rgba(255, 215, 129, 0.351);">Excel</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="project-box">
-
-        <div class="project-info">
-          <h2 class="project-title">Escape Room Web Panel</h2>
-
-          <hr class="project-hr">
-          </hr>
-          <p>
-            The Escape Garden State Web Panel was a project I made for my previous employer, an escape
-            room company in New Jersey. The site replaced an old, out-dated subscription site with a customized
-            web app that fit the needs of the company.
-          </p>
-          <h3>Technical Details</h3>
-          <ul>
-            <li>Utilized Google Firebase as storage, authentication, and database for the project.</li>
-            <li>Programmed custom tools for the app, including scripting time functions and game features with
-              Javascript.</li>
-            <li>Developed utils for statistic tracking, to be used for further adveritsiing and data analysis.</li>
-            <li>Designed, and created with original CSS, a GUI for employees to run the escape rooms.</li>
-          </ul>
-          <div class="skills">
-            <div class="tech-skill" style="background-color: rgba(139, 247, 255, 0.351);">Javascript</div>
-            <div class="tech-skill" style="background-color: rgba(255, 245, 129, 0.351);">HTML</div>
-            <div class="tech-skill" style="background-color: rgba(139, 255, 195, 0.351);">CSS</div>
-          </div>
-        </div>
-
-      </div>
-
-      <div class="project-box">
-
-        <div class="project-info">
-          <h2 class="project-title">Scrappy</h2>
-          <hr class="project-hr">
-          </hr>
-          <p>
-            Scrappy is a React social media web app I made with a team in my software engineering class at Brown. It
-            combines
-            the best aspects of photo sharing apps with social media, forming a sentimental and reflective view into a
-            user's life.
-          </p>
-          <h3>Technical Details</h3>
-          <ul>
-            <li>Used React TypeScript Framework to build out the components of the site, coupled with React Router to
-              create a navigable state system.</li>
-            <li>Connected with Google Authentication API to compose a login service and security.</li>
-            <li>Developed a MongoDB Java database, and uploaded photos to AWS as storage.</li>
-            <li>Personally programmed an NLP sorting algorithm using English feature vectors to sort posts based on
-              Hashtags.</li>
-          </ul>
-          <div class="skills">
-            <div class="tech-skill" style="background-color: rgba(139, 247, 255, 0.351);">Javascript</div>
-            <div class="tech-skill" style="background-color: rgba(195, 251, 255, 0.351);">Typescript</div>
-            <div class="tech-skill" style="background-color: rgba(255, 245, 129, 0.351);">HTML</div>
-            <div class="tech-skill" style="background-color: rgba(139, 255, 195, 0.351);">CSS</div>
-            <div class="tech-skill" style="background-color: rgba(220, 139, 255, 0.351);">Java</div>
-          </div>
-        </div>
-      </div>
-
-
-
-    </div>
-    <div class="caption">
-      <p>Peonies in a Vase, c. 1885. Charles Ethan Porter.</p>
-    </div>
-    <div class="section-separator" id="experience-title">
-      <hr class="line">
-    </div>
-  </div>
-
         <footer>
             <p>
                 © 2024 Tyler Gurth. All rights reserved. JS, HTML, and a dash of
