fixed weird misalignments

--- a/projects.html
+++ b/projects.html
@@ -61,14 +61,17 @@
             </p>
         </div>
         <div id="page-body">
-            <div id="page-content">
-                <h2 id="page-title">Projects</h2>
-                <div class="page-text">
-                    <blockquote>
-                        Below are some of the paid/unpaid projects I've done
-                        over the past few years! This is just a snapshot of the
-                        work I've done - feel free to reach out for more info!
-                    </blockquote>
+            <div id="project-page-container">
+                <div id="page-content">
+                    <h2 id="page-title">Projects</h2>
+                    <div class="page-text">
+                        <blockquote>
+                            Below are some of the paid/unpaid projects I've done
+                            over the past few years! This is just a snapshot of
+                            the work I've done - feel free to reach out for more
+                            info!
+                        </blockquote>
+                    </div>
                 </div>
                 <div class="page-box">
                     <div class="project-info">
@@ -110,8 +113,9 @@
                             </li>
                             <li>
                                 Visualized complex data in actionable graphs
-                                using <span class="code">PyPlot</span>,
-                                revealing qualitative trends.
+                                using
+                                <span class="code">PyPlot</span>, revealing
+                                qualitative trends.
                             </li>
                         </ul>
                         <div class="skills">
