--- a/projects.html
+++ b/projects.html
@@ -29,13 +29,13 @@
     <body>
         <div id="nav-bar-wrapper">
             <div id="nav-bar">
-                <a
-                    id="about-anchor"
-                    class="nav-element selected-nav"
-                    href="index.html"
+                <a id="about-anchor" class="nav-element" href="index.html"
                     >About</a
                 >
-                <a id="project-anchor" class="nav-element" href="projects.html"
+                <a
+                    id="project-anchor"
+                    class="nav-element selected-nav"
+                    href="projects.html"
                     >Projects</a
                 >
                 <div id="nav-title">
