--- a/index.html
+++ b/index.html
@@ -27,39 +27,16 @@
     </head>
 
     <body>
-        <div id="nav-bar-wrapper">
+         <div id="nav-bar-wrapper">
             <div id="nav-bar">
-                <a
-                    id="about-anchor"
-                    class="nav-element selected-nav"
-                    href="index.html"
-                    >About</a
-                >
-                <a id="project-anchor" class="nav-element" href="projects.html"
-                    >Projects</a
-                >
                 <div id="nav-title">
                     <hr class="nav-line" />
                     <p>TG</p>
                     <hr class="nav-line" />
                 </div>
-                <a
-                    id="experience-anchor"
-                    class="nav-element"
-                    href="experience.html"
-                    >Experience</a
-                >
-                <a id="gallery-anchor" class="nav-element" href="gallery.html"
-                    >Gallery</a
-                >
             </div>
         </div>
         <div id="fake-nav"></div>
-        <div id="banner">
-            <p id="painting-caption">
-                <em>At the Races</em>, Edouard Manet c. 1875
-            </p>
-        </div>
         <div id="page-body">
             <div id="page-content">
                 <h2 id="page-title">Tyler Gurth</h2>
@@ -82,54 +59,30 @@
                             >or playing dodgeball</a
                         >). I also Head TA for introductory computer science
                         classes here (ask me about
-                        <a href="https://cs22.io/" target="_blank">proofs</a> or
+                        <a href="https://cs22.io/" target="_blank">proofs</a>,
                         all things
                         <a
                             href="https://cs.brown.edu/courses/cs002/"
                             target="_blank"
                             >digital</a
-                        >!).
+                        >, or <a
+                            href="https://cs.brown.edu/courses/csci1730/"
+                            target="_blank"
+                            >programming languages</a
+                        >).
                     </blockquote>
                     <blockquote>
-                        I am versed in <span class="code">Python</span>,
-                        <span class="code">HTML</span>,
-                        <span class="code">CSS</span>,
-                        <span class="code">Java</span>,
-                        <span class="code">SQL</span>,
-                        <span class="code">Javascript</span>,
-                        <span class="code">C</span>,
-                        <span class="code">C++</span>, and
-                        <span class="code">Typescript</span>. Some of my
-                        favorite libraries are <span class="code">NumPY</span>,
-                        <span class="code">Pandas</span>,
-                        <span class="code">JavaFX</span>,
-                        <span class="code">Pygame</span>, and
-                        <a href="https://www.bpl.org/" target="_blank"
-                            >The Boston Public</a
-                        >. I've also been known to dabble in
-                        <span class="code">React.js</span>,
-                        <span class="code">MongoDB</span>, and
-                        <span class="code">Flutter</span> for my larger app
-                        development. At Brown, I'm in the software and visual
-                        computing track (hopefully). This coming summer, I'll be
-                        working for
+                        At Brown CS, I'm in the software and security tracks. This coming summer, I'll be
+                        start working fulltime for
                         <a href="https://www.duolingo.com" target="_blank"
                             >Duolingo</a
                         >
                         doing software engineering.
                     </blockquote>
                     <blockquote>
-                        My engineering interests lie in game development,
-                        software engineering, and UI/UX. My research interests
-                        lie in combining computer vision with art history (well,
-                        whatever that means). My art interests lie in
-                        impressionism and early modern European art (like the
-                        <a
-                            href="https://www.nga.gov/collection/art-object-page.1180.html"
-                            target="_blank"
-                            >Manet piece</a
-                        >
-                        that is the above banner!).
+                        My engineering interests lie in game development and security. My research interests
+                        lie in combining computer vision with art history. My art interests lie in
+                        art of the Cold War, Slavic Art, and architectural history (from the 19th Century onwards).
                     </blockquote>
                     <blockquote>
                         Feel free to reach out on any of my socials at any time,
@@ -182,8 +135,10 @@
         </div>
         <footer>
             <p>
-                © 2024 Tyler Gurth. All rights reserved. JS, HTML, and a dash of
-                CSS.
+                © 2025 Tyler Gurth. All rights reserved.
+            </p>
+            <p>
+                Banner: <em>Still Life with Apples</em>, Charles Ethan Porter, 1886.
             </p>
         </footer>
         <script src="./main.js"></script>
