--- a/index.html
+++ b/index.html
@@ -72,12 +72,11 @@
                         >).
                     </blockquote>
                     <blockquote>
-                        At Brown CS, I'm in the software and security tracks. This coming summer, I'll be
-                        start working full time for
+                        I'm a full-time software engineer at
                         <a href="https://www.duolingo.com" target="_blank"
                             >Duolingo</a
                         >
-                        doing software engineering.
+                        . At Brown, I was on the Computer Science software and security tracks.
                     </blockquote>
                     <blockquote>
                         My engineering interests lie in game development and security. My research interests
