--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
                     <blockquote>
                         My engineering interests lie in game development and security. My research interests
                         lie in combining computer vision with art history. My art interests lie in
-                        art of the Cold War, Slavic Art, and architectural history (from the 19th Century onwards).
+                        art of the Cold War, Slavic Art, and architectural history (from the 19th Century onwards). Lately, I've been
+                        particularly interested in exploring architecture of religious spaces, after seeing a suspiscious number of
+                        onion domes while in Bavaria.
                     </blockquote>
                     <blockquote>
                         Feel free to reach out on any of my socials at any time,
