remastered photography site

--- a/photography.html
+++ b/photography.html
@@ -34,7 +34,9 @@
                 </div>
             </div>
             <div id="photo-about">
-                <img
+                I'm currently re-doing my photography website, so please
+                check back soon!
+                <!-- <img
                     src="Assets/Photos/TylerHeadGate.jpg"
                     id="photo-headshot"
                 />
@@ -49,9 +51,9 @@
                     <button class="page-button">
                         <a href=" mailto:tgurth21@gmail.com">CONTACT ME</a>
                     </button>
-                </div>
+                </div> -->
             </div>
-            <div id="portfolio-title">
+            <!-- <div id="portfolio-title">
                 <p>PORTFOLIO</p>
             </div>
             <div id="portfolio">
@@ -123,7 +125,7 @@
                 />
                 <img class="portfolio-photo" src="Assets/Photos/Zach.png" />
             </div>
-        </div>
+        </div> -->
 
         <p style="text-align: center; color: black; width: 100vw">
             Looking for my programming projects? Check out my
@@ -131,7 +133,7 @@
         </p>
         <footer>
             <p style="text-align: center">
-                © 2023 Tyler Gurth. All rights reserved. Javascript, HTML, and a
+               © 2025 Tyler Gurth. All rights reserved. Javascript, HTML, and a
                 dash of CSS.
             </p>
         </footer>
